--- a/BOOKS.html
+++ b/BOOKS.html
@@ -14,8 +14,8 @@
   <div class="content">
    <section>
     <h2>MESSAGE</h2>
-     <p>このサイトは私、Nakamura Yutaが、<br>
-      webサイト作成を目的に作っています！</p>
+     <p>私は幼いころから本が好きでよく読書をしていて、<br>
+      今では私も小説を執筆しています！</p>
      <p>X(旧twitter)→<a href="https://x.com/nakamurayuta26">私のアカウント</a>
      <h3>私の好きな物、趣味</h3>
 <nav>
@@ -23,7 +23,7 @@
   <li><a href="BOOKS.html">読書・小説の執筆</a></li>
   <li><a href="SPORTS.html">スポーツ観戦</a></li>
 <br>
-  <li><a href="HOME.html">TOP</a></li>
+  <li><a href="index.html">TOP</a></li>
  </ul>
 </nav>
 <main>
