--- a/SPORTS.html
+++ b/SPORTS.html
@@ -23,7 +23,7 @@
   <li><a href="BOOKS.html">読書・小説の執筆</a></li>
   <li><a href="SPORTS.html">スポーツ観戦</a></li>
 <br>
-  <li><a href="HOME.html">TOP</a></li>
+  <li><a href="index.html">TOP</a></li>
  </ul>
 </nav>
 <main>
