--- a/BOOKS.html
+++ b/BOOKS.html
@@ -12,6 +12,7 @@
   <h1><b>HELLO WORLD!</b></h1>
  </header>
   <div class="content">
+   <p><img src="book_open_yoko.png"</p>
    <section>
     <h2>MESSAGE</h2>
      <p>私は幼いころから本が好きでよく読書をしていて、<br>
