--- a/SPORTS.html
+++ b/SPORTS.html
@@ -12,6 +12,7 @@
   <h1><b>HELLO WORLD!</b></h1>
  </header>
   <div class="content">
+   <p><img src="baseball_man3_yellow.png"</p>
    <section>
     <h2>MESSAGE</h2>
      <p>私は野球やサッカーなど様々なスポーツが好きですが、<br>
