--- a/BOOKS.html
+++ b/BOOKS.html
@@ -17,7 +17,7 @@
     <h2>MESSAGE</h2>
      <p>私は幼いころから本が好きでよく読書をしていて、<br>
       今では私も小説を執筆しています！</p>
-     <p>X(旧twitter)→<a href="https://x.com/nakamurayuta26">私のアカウント</a>
+     <p>小説家になろう→<a href="https://mypage.syosetu.com/1094356/">私のアカウント</a>
      <h3>私の好きな物、趣味</h3>
 <nav>
  <ul>
