--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1><b>HELLO WORLD!</b></h1>
  </header>
    <section>
-    <p><img src="baseball_man3_yellow.png"</p>
+    <p><img src="shigoto_man_casual.png"</p>
     <h2>MESSAGE</h2>
      <p>このサイトは私、Nakamura Yutaが、<br>
       webサイト作成を目的に作っています！</p>
