--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="author" content="Nakamura Yuta">
 <meta name="description" content="Nakamura Yutaのwebサイト作成練習">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Nakamura Yuta's website</title>
 <link href="style.css" rel="stylesheet">
 </head>
