--- a/SPORTS.html
+++ b/SPORTS.html
@@ -13,7 +13,7 @@
   <h1><b>HELLO WORLD!</b></h1>
  </header>
    <section>
-    <p><img src="baseball_man3_yellow.png"</p>
+    <p><img src="baseball_man3_yellow.png"></p>
     <h2>MESSAGE</h2>
      <p>私は野球やサッカーなど様々なスポーツが好きですが、<br>
       その中でも特に野球が好きです！</p>
