--- a/BOOKS.html
+++ b/BOOKS.html
@@ -13,7 +13,7 @@
   <h1><b>HELLO WORLD!</b></h1>
  </header>
    <section>
-    <p><img src="book_open_yoko.png"</p>
+    <p><img src="book_open_yoko.png"></p>
     <h2>MESSAGE</h2>
      <p>私は幼いころから本が好きでよく読書をしていて、<br>
       今では私も小説を執筆しています！</p>
