--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <h1><b>HELLO WORLD!</b></h1>
  </header>
    <section>
-    <p><img src="shigoto_man_casual.png"</p>
+    <p><img src="shigoto_man_casual.png"></p>
     <h2>MESSAGE</h2>
      <p>このサイトは私、Nakamura Yutaが、<br>
       webサイト作成を目的に作っています！</p>
-     <p>X(旧twitter)→<a href="https://x.com/nakamurayuta26">私のアカウント</a>
+     <p>X(旧twitter)→<a href="https://x.com/nakamurayuta26">私のアカウント</a></p>
      <h3>私の好きな物、趣味</h3>
 <nav>
  <ul>
