--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <h1><b>HELLO WORLD!</b></h1>
  </header>
    <section>
-    <p><img src="shigoto_man_casual.png"></p>
+    <p><img src="shigoto_man_casual.png" alt="仕事をする人のイラスト"></p>
     <h2>MESSAGE</h2>
      <p>このサイトは私、Nakamura Yutaが、<br>
       webサイト作成を目的に作っています！</p>
