--- a/BOOKS.html
+++ b/BOOKS.html
@@ -10,7 +10,7 @@
 </head>
 <body>
  <header>
-  <h1><b>HELLO WORLD!</b></h1>
+  <h1><b>HELLO!</b></h1>
  </header>
    <section>
     <p><img src="book_open_yoko.png"></p>
