--- a/SPORTS.html
+++ b/SPORTS.html
@@ -10,7 +10,7 @@
 </head>
 <body>
  <header>
-  <h1><b>HELLO WORLD!</b></h1>
+  <h1><b>HELLO!</b></h1>
  </header>
    <section>
     <p><img src="baseball_man3_yellow.png"></p>
