--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
  <header>
-  <h1><b>HELLO WORLD!</b></h1>
+  <h1><b>HELLO!</b></h1>
  </header>
    <section>
     <p><img src="shigoto_man_casual.png" alt="仕事をする人のイラスト"></p>
