--- a/BOOKS.html
+++ b/BOOKS.html
@@ -19,11 +19,13 @@
       今では私も小説を執筆しています！</p>
      <p>小説家になろう→<a href="https://mypage.syosetu.com/1094356/">私のアカウント</a></p>
      <h3>私の好きな物、趣味</h3>
+ <table>
+  <tr><td><a href="BOOKS.html">読書・小説の執筆</a></td></tr>
+  <tr><td><a href="SPORTS.html">スポーツ観戦</a></td></tr>
+ </table>
+<br>
 <nav>
  <ul>
-  <li><a href="BOOKS.html">読書・小説の執筆</a></li>
-  <li><a href="SPORTS.html">スポーツ観戦</a></li>
-<br>
   <li><a href="index.html">TOP</a></li>
  </ul>
 </nav>
