--- a/SPORTS.html
+++ b/SPORTS.html
@@ -18,11 +18,13 @@
      <p>私は野球やサッカーなど様々なスポーツが好きですが、<br>
       その中でも特に野球が好きです！</p>
      <h3>私の好きな物、趣味</h3>
-<nav>
- <ul>
-  <li><a href="BOOKS.html">読書・小説の執筆</a></li>
-  <li><a href="SPORTS.html">スポーツ観戦</a></li>
+ <table>
+  <tr><td><a href="BOOKS.html">読書・小説の執筆</a></td></tr>
+  <tr><td><a href="SPORTS.html">スポーツ観戦</a></td></tr>
+ </table>
 <br>
+ <nav>
+ <ul>
   <li><a href="index.html">TOP</a></li>
  </ul>
 </nav>
