--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
       webサイト作成を目的に作っています！</p>
      <p>X(旧twitter)→<a href="https://x.com/nakamurayuta26">私のアカウント</a></p>
      <h3>私の好きな物、趣味</h3>
-<nav>
- <ul>
-  <li><a href="BOOKS.html">読書・小説の執筆</a></li>
-  <li><a href="SPORTS.html">スポーツ観戦</a></li>
+ <table>
+  <tr><td><a href="BOOKS.html">読書・小説の執筆</a></td></tr>
+  <tr><td><a href="SPORTS.html">スポーツ観戦</a></td></tr>
+ </table>
 <br>
+ <nav>
+ <ul>
   <li><a href="index.html">TOP</a></li>
  </ul>
 </nav>
