--- a/SPORTS.html
+++ b/SPORTS.html
@@ -21,13 +21,8 @@
  <table>
   <tr><td><a href="BOOKS.html">読書・小説の執筆</a></td></tr>
   <tr><td><a href="SPORTS.html">スポーツ観戦</a></td></tr>
+  <tr><td><a href="index.html">TOP</a><td><tr>
  </table>
-<br>
- <nav>
- <ul>
-  <li><a href="index.html">TOP</a></li>
- </ul>
-</nav>
    </section>
 <footer>
  <p>Copyright Nakamura Yuta.</p>
